# bento-docs

./: README.md  latest  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: build-and-test.yml  deploy-active.yml  deploy.yml
developer-docs/: 404.html  index.html  sitemap.xml
developer-docs/adding-services/: index.html
developer-docs/bentoctl/: index.html
developer-docs/deployment/: index.html
developer-docs/dev-container/: index.html
developer-docs/development/: index.html
developer-docs/installation/: index.html
developer-docs/json-schemas/: index.html
developer-docs/minio/: index.html
developer-docs/monitoring/: index.html
developer-docs/phenopackets_v1_to_v2/: index.html
developer-docs/public_discovery/: index.html
developer-docs/reference_material/: index.html
developer-docs/reverse-proxy/: index.html
developer-docs/search/: search_index.json
developer-docs/troubleshooting/: index.html
docs/: adding-services.md  index.md  installation.md
docs/migration/: .pages  migrating_to_12.md  migrating_to_15_2.md  migrating_to_16.md  migrating_to_17.md  migrating_to_17_1.md  migrating_to_18.md
main/: 404.html  index.html  sitemap.xml
main/adding-services/: index.html
main/bentoctl/: index.html
main/deployment/: index.html
main/dev-container/: index.html
main/development/: index.html
main/installation/: index.html
main/json-schemas/: index.html
main/minio/: index.html
main/monitoring/: index.html
main/phenopackets_v1_to_v2/: index.html
main/public_discovery/: index.html
main/reference_material/: index.html
(+28 files in other folders)
